Added MyKPI view and ctrl

--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -13,6 +13,7 @@
                         Utilization
                     </div>
                     <div class="item item-text-wrap">
+                        <div easypiechart id="utilization-chart" options="options" percent="KPI.utilization.percent"></div>
                         This is a basic Card with some text.
                     </div>
                 </div>
@@ -23,6 +24,7 @@
                         YTD Late Timesheets
                     </div>
                     <div class="item item-text-wrap">
+                        <!-- <div easypiechart id="utilization-chart" options="options" percent="KPI.utilization.percent"></div> -->
                         This is a basic Card with some text.
                     </div>
                 </div>
