--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -15,7 +15,7 @@
                     <div class="item item-text-wrap row">
                         <div class="col col-25" easypiechart id="utilization-chart" options="options" percent="KPI.utilization.percent"></div>
                         
-                        <div class="col col-75 col-offset-25">
+                        <div class="col col-75 col-offset-25 cards-table-col">
                             <table id="cards-table">
                                 <tr>
                                     <td>Target</td>
@@ -28,7 +28,7 @@
                                     <td> </td>
                                 </tr>
                                 <tr>
-                                    <td>Availibility</td>
+                                    <td>Available</td>
                                     <td>{{KPI.utilization.availableDate | date:"MM/dd/yyyy"}}</td>
                                     <td> </td>
                                 </tr>
@@ -42,8 +42,30 @@
                     <div class="item item-divider">
                         YTD Late Timesheets
                     </div>
-                    <div class="item item-text-wrap">
-                        This is a basic Card with some text.
+                    <div class="item item-text-wrap row">
+                        <div class="col col-25 main-column">
+                            <p>{{KPI.lateTimeSheets.number}}</p>
+                        </div>
+                        
+                        <div class="col col-75 col-offset-25 cards-table-col">
+                            <table id="cards-table">
+                                <tr>
+                                    <td>Target</td>
+                                    <td>2 or Less</td>
+                                    <td> </td> <!-- The extra column is to give padding in fill width views -->
+                                </tr>
+                                <tr>
+                                    <td>Current Missing</td>
+                                    <td>{{KPI.lateTimeSheets.number}}</td>
+                                    <td> </td>
+                                </tr>
+                                <tr>
+                                    <td>As of</td>
+                                    <td>{{KPI.utilization.relevantDate | date:"MM/dd/yyyy"}}</td>
+                                    <td> </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
