Added RevManaged card. Changed font size to 30 for main content.

--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -19,7 +19,7 @@
                             <table id="cards-table">
                                 <tr>
                                     <td>Target</td>
-                                    <td>92%</td>
+                                    <td>{{KPI.utilization.target}}%</td>
                                     <td> </td> <!-- The extra column is to give padding in fill width views -->
                                 </tr>
                                 <tr>
@@ -51,7 +51,7 @@
                             <table id="cards-table">
                                 <tr>
                                     <td>Target</td>
-                                    <td>2 or Less</td>
+                                    <td>{{KPI.lateTimeSheets.number}} or Less</td>
                                     <td> </td> <!-- The extra column is to give padding in fill width views -->
                                 </tr>
                                 <tr>
@@ -61,7 +61,7 @@
                                 </tr>
                                 <tr>
                                     <td>As of</td>
-                                    <td>{{KPI.utilization.relevantDate | date:"MM/dd/yyyy"}}</td>
+                                    <td>{{KPI.lateTimeSheets.relevantDate | date:"MM/dd/yyyy"}}</td>
                                     <td> </td>
                                 </tr>
                             </table>
@@ -77,8 +77,30 @@
                     <div class="item item-divider">
                         Revenue Managed
                     </div>
-                    <div class="item item-text-wrap">
-                        This is a basic Card with some text.
+                    <div class="item item-text-wrap row">
+                        <div class="col col-25 main-column">
+                            <p>{{KPI.revenueManaged.amount | currency:"$":0}}</p>
+                        </div>
+                        
+                        <div class="col col-75 col-offset-25 cards-table-col">
+                            <table id="cards-table">
+                                <tr>
+                                    <td>Target</td>
+                                    <td>{{KPI.revenueManaged.target}}</td>
+                                    <td> </td> <!-- The extra column is to give padding in fill width views -->
+                                </tr>
+                                <!-- <tr>
+                                    <td>Current Missing</td>
+                                    <td>{{KPI.revenueManaged.number}}</td>
+                                    <td> </td>
+                                </tr> -->
+                                <tr>
+                                    <td>As of</td>
+                                    <td>{{KPI.revenueManaged.relevantDate | date:"MM/dd/yyyy"}}</td>
+                                    <td> </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
