--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -87,7 +87,7 @@
                             <table id="cards-table">
                                 <tr>
                                     <td>Target</td>
-                                    <td>{{KPI.revenueManaged.target}}</td>
+                                    <td>{{KPI.revenueManaged.target | currency:"$":0}}</td>
                                     <td> </td> <!-- The extra column is to give padding in fill width views -->
                                 </tr>
                                 <!-- <tr>
@@ -120,7 +120,7 @@
                             <table id="cards-table">
                                 <tr>
                                     <td>Target</td>
-                                    <td>{{KPI.teamSales.target}}</td>
+                                    <td>{{KPI.teamSales.target | currency:"$":0}}</td>
                                     <td> </td> <!-- The extra column is to give padding in fill width views -->
                                 </tr>
                                 <!-- <tr>
@@ -146,8 +146,31 @@
                     <div class="item item-divider">
                         Lead Sales
                     </div>
-                    <div class="item item-text-wrap">
-                        This is a basic Card with some text.
+
+                    <div class="item item-text-wrap row">
+                        <div class="col col-25 main-column">
+                            <p>{{KPI.leadSales.amount | currency:"$":0}}</p>
+                        </div>
+                        
+                        <div class="col col-75 col-offset-25 cards-table-col">
+                            <table id="cards-table">
+                                <tr>
+                                    <td>Target</td>
+                                    <td>{{KPI.leadSales.target | currency:"$":0}}</td>
+                                    <td> </td> <!-- The extra column is to give padding in fill width views -->
+                                </tr>
+                                <!-- <tr>
+                                    <td>Current Missing</td>
+                                    <td>{{KPI.leadSales.number}}</td>
+                                    <td> </td>
+                                </tr> -->
+                                <tr>
+                                    <td>As of</td>
+                                    <td>{{KPI.leadSales.relevantDate | date:"MM/dd/yyyy"}}</td>
+                                    <td> </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
