Added AssignmentAp card and data

--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -77,7 +77,7 @@
                     <div class="item item-divider">
                         Revenue Managed
                     </div>
-                    
+
                     <div class="item item-text-wrap row">
                         <div class="col col-25 main-column">
                             <p>{{KPI.revenueManaged.amount | currency:"$":0}}</p>
@@ -177,10 +177,33 @@
             <div class="col">
                 <div class="card">
                     <div class="item item-divider">
-                        Assignment Appraisal
+                        Assignment Appraisals
                     </div>
-                    <div class="item item-text-wrap">
-                        This is a basic Card with some text.
+
+                    <div class="item item-text-wrap row">
+                        <div class="col col-25 main-column">
+                            <p>{{KPI.assignmentAppraisals.amount}}</p>
+                        </div>
+                        
+                        <div class="col col-75 col-offset-25 cards-table-col">
+                            <table id="cards-table">
+                                <tr>
+                                    <td>Target</td>
+                                    <td>{{KPI.assignmentAppraisals.target}} at Year End</td>
+                                    <td> </td> <!-- The extra column is to give padding in fill width views -->
+                                </tr>
+                                <!-- <tr>
+                                    <td>Current Missing</td>
+                                    <td>{{KPI.assignmentAppraisals.number}}</td>
+                                    <td> </td>
+                                </tr> -->
+                                <tr>
+                                    <td>As of</td>
+                                    <td>{{KPI.assignmentAppraisals.relevantDate | date:"MM/dd/yyyy"}}</td>
+                                    <td> </td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
