Added final card placeholder

--- a/www/templates/my-kpis.html
+++ b/www/templates/my-kpis.html
@@ -6,6 +6,16 @@
             My KPIs
         </ion-item>
 
+        <!-- <span class="chart" easypiechart ng-init="options = { animate:false, barColor:'#E67E22', scaleColor:false, lineWidth:3, lineCap:'butt' }" percent="percent" options="options">
+            <span class="percent" ng-bind="percent"></span>
+        </span>
+        <input type="range" min="-100" max="100" step="1" ng-model="percent" />
+        <br>
+        <span class="chart" easypiechart percent="anotherPercent" options="anotherOptions">
+            <span class="percent" ng-bind="percent"></span>
+        </span>
+        <input type="range" min="-100" max="100" step="1" ng-model="anotherPercent" /> -->
+
         <div class="row responsive-lg">
             <div class="col">
                 <div class="card">
@@ -213,10 +223,10 @@
             <div class="col col-50">
                 <div class="card">
                     <div class="item item-divider">
-                        Utilization
+                        Onshore Staff Consultant Account Resources (Individual) - Info
                     </div>
                     <div class="item item-text-wrap">
-                        This is a basic Card with some text.
+                        No Data found for your UPN.
                     </div>
                 </div>
             </div>
@@ -232,9 +242,9 @@
             </div> -->
         </div>
 
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
+<!--       <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
         {{playlist.title}}
-      </ion-item>
+      </ion-item> -->
     </ion-list>
   </ion-content>
 </ion-view>
