--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,7 +42,32 @@ table#cards-table {
 }
 
 .cards-table-col {
-    margin-left: 35px;
+    margin-left: 45px;
+}
+
+.no-border {
+    border: none;
+}
+
+.side-menu-bar {
+    /*height: 55px;*/
+    padding: 0px;
+
+}
+.menu-hive-logo {
+    height: 35px;
+    width: 65px;
+    margin-top: 3px;
+    margin-left: 5px;
+}
+
+.menu-cap-logo {
+    float: right;
+    clear: left;
+    width: 38px;
+    height: 38px;
+    margin-top: 2px;
+    margin-left: 20px;
 }
 
 body {
