--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,7 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu expose-aside-when="large" side="left">
     <ion-header-bar class="bar-light side-menu-bar">
       <img src="img/hive_logo-blk.png" class="menu-hive-logo">
       <!-- <h1 class="title">by</h1> -->
