--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,7 +12,7 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu expose-aside-when="large" side="left">
+  <ion-side-menu side="left">
     <ion-header-bar class="bar-light side-menu-bar">
       <img src="img/hive_logo-blk.png" class="menu-hive-logo">
       <!-- <h1 class="title">by</h1> -->
@@ -28,7 +28,7 @@
           <i class="icon ion-ios-home"></i>
           My KPIs
         </ion-item>
-        <ion-item class="item item-icon-left no-border" menu-close href="#/app/browse">
+        <ion-item class="item item-icon-left no-border" menu-close href="#/app/expectations">
           <i class="icon ion-android-checkbox"></i>
           Expectations
         </ion-item>
