--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -32,7 +32,7 @@
           <i class="icon ion-android-checkbox"></i>
           Expectations
         </ion-item>
-        <ion-item class="item item-icon-left no-border" menu-close href="#/app/playlists">
+        <ion-item class="item item-icon-left no-border" menu-close href="#/app/glossary">
           <i class="icon ion-android-bookmark"></i>
           Glossary
         </ion-item>
