Added organization view and controller and state

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -36,7 +36,7 @@
           <i class="icon ion-android-bookmark"></i>
           Glossary
         </ion-item>
-        <ion-item class="item item-icon-left no-border" menu-close href="#/app/playlists">
+        <ion-item class="item item-icon-left no-border" menu-close href="#/app/organization">
           <i class="icon ion-briefcase"></i>
           NA Organization
         </ion-item>
