--- a/www/templates/glossary.html
+++ b/www/templates/glossary.html
@@ -14,7 +14,7 @@
             </div>
 
             <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
+                <i class="icon ion-android-search placeholder-icon"></i>
                 <input type="text" ng-model="filter" placeholder="Search">
             </label>
 
