Fixed the table padding issue

--- a/www/templates/expectations.html
+++ b/www/templates/expectations.html
@@ -13,7 +13,7 @@
                 Level: {{expectations.level}}
             </div>
 
-            <div class="item item-text-wrap">
+            <!-- <div class="item item-text-wrap"> -->
                 <table id="expectations-table">
                     <tr>
                         <th>Competencies</th>
